# text-extraction-service

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-build.yml  terraform-deploy.yml
docs/: ARCHITECTURE_DIAGRAMS.md  IMPLEMENTATION_PLAN.md  QUICK_REFERENCE.md  TESTING_STRATEGY.md  TEXT_EXTRACTION_DECISION_MATRIX.md  TEXT_EXTRACTION_SERVICE_ARCHITECTURE.md
docs/issues/: issue-1-tracking.md
docs/issues/archived/: issue-4-tracking.md  issue-5-tracking.md  issue-6-tracking.md  issue-7-tracking.md
examples/: assistant_config_original.py  langdock_inline_client_original.py  two_pass_ocr_processor_original.py
service/: __init__.py  jobs.py  main.py
src/text_extraction/: __init__.py  detector.py  json_repair.py  models.py  processor.py  router.py
src/text_extraction/backends/: __init__.py  base.py  gemini.py  langdock.py  tesseract.py
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_backends_base.py  test_backends_gemini.py  test_detector.py  test_jobs.py  test_json_repair.py  test_processor.py  test_router.py
