[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "text-extraction"
version = "0.1.0"
description = "Standalone text extraction service for PDF and image files with intelligent OCR routing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Unfuture", email = "dev@unfuture.de" }
]
keywords = ["ocr", "pdf", "text-extraction", "document-processing", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "pymupdf>=1.23.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]
tesseract = [
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
]
gemini = [
    "google-genai>=1.0.0",
    "pillow>=10.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
eval = [
    "datasets>=2.14.0",
    "jiwer>=3.0.0",
    "rapidfuzz>=3.0.0",
    "anls-star>=0.2.0",
    "tabulate>=0.9.0",
    "tqdm>=4.65.0",
    "pillow>=10.0.0",
]
all = [
    "text-extraction[service,tesseract,gemini,dev,eval]",
]

[project.urls]
Homepage = "https://github.com/Unfuture/text-extraction-service"
Documentation = "https://github.com/Unfuture/text-extraction-service#readme"
Repository = "https://github.com/Unfuture/text-extraction-service"
Issues = "https://github.com/Unfuture/text-extraction-service/issues"

[project.scripts]
text-extraction = "text_extraction.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/text_extraction"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "performance: Performance benchmarks",
    "slow: Slow tests",
    "eval: OCR evaluation tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
